# LSC

./: .gitignore  BUILD_COMPLETE_REPORT.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  FIX_BLANK_WINDOW.md  LATEST_FIX.md  PROJECT_DELIVERY_SUMMARY.md  README.md  README_BUILD.md  TESTING_GUIDE.md  TESTING_GUIDE_V2.md  _cache_debug.txt  _cache_debug2.txt  _cache_debug3.txt  _cache_debug4.txt  _cache_debug5.txt  _electron_stderr.txt  _electron_stdout.txt  _run_electron.bat  _stall_method_node.txt  _test_electron.js  audit_screenshots.py  bug_fix_summary.md  bug_report.md  build.bat  build.py  computer_use_test.py  computer_use_test_v2.py  convert_icon.py  convert_icon_white_bg.py  debug_douyin.py  debug_douyin2.py  debug_title.py  download_libmpv.py  e2e_platform_test_urls.json  extract_icon.py  fix_manager.py  installer.iss  launch_debug.py  (+18 more)
lsc/: cli.py  (+2 more)
shotcut-source/src/lsc/: CMakeLists.txt  LscConfig.h  LscLog.h  last_cl.rsp  one_livestream.rsp
shotcut-source/src/lsc/analyzer/: AnalysisProfile.h  AudioAnalyzer.cpp  AudioAnalyzer.h  BeatDetector.cpp  BeatDetector.h  ClipExporter.cpp  ClipExporter.h  CommentarySegmenter.cpp  CommentarySegmenter.h  CommentaryStrategy.cpp  CommentaryStrategy.h  CompositeHighlightStrategy.cpp  CompositeHighlightStrategy.h  DanceSegmentScorer.cpp  DanceSegmentScorer.h  DanceStrategy.cpp  DanceStrategy.h  DialogStrategy.cpp  DialogStrategy.h  FeedbackStore.cpp  FeedbackStore.h  GameHudAnalyzer.cpp  GameHudAnalyzer.h  GameStrategy.cpp  GameStrategy.h  GenericStrategy.cpp  GenericStrategy.h  HighlightDetector.cpp  HighlightDetector.h  HighlightEngine.cpp  HighlightEngine.h  HighlightRanker.cpp  HighlightRanker.h  HighlightUtils.cpp  HighlightUtils.h  IHighlightStrategy.h  MaterialClassifier.cpp  MaterialClassifier.h  PoseAnalyzer.cpp  PoseAnalyzer.h  (+18 more)
shotcut-source/src/lsc/app/: MainWindow.cpp  MainWindow.h  main.cpp
shotcut-source/src/lsc/build-verify/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  lsc.sln  lsc.vcxproj  lsc.vcxproj.filters  lsc_app.vcxproj  lsc_app.vcxproj.filters  test_analysis_dock.vcxproj  test_analysis_dock.vcxproj.filters  test_audio_analyzer.vcxproj  test_audio_analyzer.vcxproj.filters  test_beat_detector.vcxproj  test_beat_detector.vcxproj.filters  test_clip_export.vcxproj  test_clip_export.vcxproj.filters  test_commentary_segmenter.vcxproj  test_commentary_segmenter.vcxproj.filters  test_dance_detector.vcxproj  test_dance_detector.vcxproj.filters  test_dance_segment_scorer.vcxproj  test_dance_segment_scorer.vcxproj.filters  test_douyin_live.vcxproj  test_douyin_live.vcxproj.filters  test_feedback_store.vcxproj  test_feedback_store.vcxproj.filters  test_gameplay_manifest.vcxproj  test_gameplay_manifest.vcxproj.filters  test_highlight_analysis.vcxproj  test_highlight_analysis.vcxproj.filters  test_highlight_detector.vcxproj  test_highlight_detector.vcxproj.filters  test_highlight_engine.vcxproj  test_highlight_engine.vcxproj.filters  test_highlight_ranker.vcxproj  test_highlight_ranker.vcxproj.filters  test_live_preview.vcxproj  (+31 more)
shotcut-source/src/lsc/build-verify2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  lsc.sln  lsc.vcxproj  lsc.vcxproj.filters  lsc_app.vcxproj  lsc_app.vcxproj.filters  test_analysis_dock.vcxproj  test_analysis_dock.vcxproj.filters  test_audio_analyzer.vcxproj  test_audio_analyzer.vcxproj.filters  test_beat_detector.vcxproj  test_beat_detector.vcxproj.filters  test_clip_export.vcxproj  test_clip_export.vcxproj.filters  test_commentary_segmenter.vcxproj  test_commentary_segmenter.vcxproj.filters  test_dance_detector.vcxproj  test_dance_detector.vcxproj.filters  test_dance_segment_scorer.vcxproj  test_dance_segment_scorer.vcxproj.filters  test_douyin_live.vcxproj  test_douyin_live.vcxproj.filters  test_feedback_store.vcxproj  test_feedback_store.vcxproj.filters  test_gameplay_manifest.vcxproj  test_gameplay_manifest.vcxproj.filters  test_highlight_analysis.vcxproj  test_highlight_analysis.vcxproj.filters  test_highlight_detector.vcxproj  test_highlight_detector.vcxproj.filters  test_highlight_engine.vcxproj  test_highlight_engine.vcxproj.filters  test_highlight_ranker.vcxproj  test_highlight_ranker.vcxproj.filters  (+32 more)
shotcut-source/src/lsc/core/: ErrorManager.cpp  ErrorManager.h  LscDatabase.cpp  LscDatabase.h  TaskCenter.cpp  TaskCenter.h  WorkflowOrchestrator.cpp  WorkflowOrchestrator.h
shotcut-source/src/lsc/dialogs/: ExportSettingsDialog.cpp  ExportSettingsDialog.h
shotcut-source/src/lsc/docks/: AnalysisDock.cpp  AnalysisDock.h  DiagnosticsDock.cpp  DiagnosticsDock.h  FeedbackStatsDock.cpp  FeedbackStatsDock.h  HighlightPreviewWidget.cpp  HighlightPreviewWidget.h  HistoryDock.cpp  HistoryDock.h  LivePreviewWidget.cpp  LivePreviewWidget.h  LivestreamDock.cpp  LivestreamDock.h  PlayerDock.cpp  PlayerDock.h  SettingsDock.cpp  SettingsDock.h  TaskDock.cpp  TaskDock.h
shotcut-source/src/lsc/docs/: 2026-06-06-product-closure-plan.md
shotcut-source/src/lsc/livestream/: GameplayDetector.cpp  GameplayDetector.h  GameplayState.h  GameplayTimeline.h  IPlatformParser.h  PlatformParser.cpp  PlatformParser.h  PreviewController.cpp  PreviewController.h  RecordingSession.cpp  RecordingSession.h  SelectiveRecorder.cpp  SelectiveRecorder.h  StreamCapture.cpp  StreamCapture.h
shotcut-source/src/lsc/tests/: test_analysis_dock.cpp  test_audio_analyzer.cpp  test_beat_detector.cpp  test_clip_export.cpp  test_commentary_segmenter.cpp  test_dance_detector.cpp  test_dance_segment_scorer.cpp  test_douyin_live.cpp  test_feedback_store.cpp  test_gameplay_timeline.cpp  test_highlight_analysis.cpp  test_highlight_detector.cpp  test_highlight_engine.cpp  test_highlight_ranker.cpp  test_live_preview.cpp  test_live_recording.cpp  test_material_classifier.cpp  test_platform_parser.cpp  test_realtime_strategy.cpp  test_recording_session.cpp  test_round_boundary_detector.cpp  test_round_clip_builder.cpp  test_runtime_layout.cpp  (+7 more)
(+430 files in other folders)
