[project]
name = "lsc"
version = "0.1.0"
description = "Live Stream Clipper - 多直播间切片系统"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5,<7",
    "python-mpv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-type-checking-type
]
ignore = [
    "E501", # line too long — we use 100 chars
    "B008", # do not perform function calls in `__init__`
    "SIM105", # use contextlib.suppress — try/except/pass is fine in cleanup code
    "SIM108", # use ternary operator — sometimes if/else is more readable
    "UP006", # use `dict[str, ...]` instead of `Dict[str, ...]`
]
exclude = [
    ".git",
    ".mimocode",
    ".runtime",
    "docs",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]  # allow assert and magic numbers in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_value = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
exclude = [
    "tests/",
    "docs/",
    ".runtime/",
    ".mimocode/",
]

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mpv.*"
ignore_missing_imports = true
